--- a/index.css
+++ b/index.css
@@ -74,6 +74,18 @@
 	text-align: right;
 	padding-right: 50px;
 	margin: 4px;
+	opacity: 0;
+	transition: 1s;
+}
+
+.summary__cont {
+	transition: 0.5s;
+	margin-top: -100px;
+	z-index: 0;
+}
+
+.summary_show {
+	display: unset;
 }
 
 /* button */
@@ -82,15 +94,24 @@
 	font-size: 1.5em;
 	font-weight: 500;
 	letter-spacing: 2px;
+	transition: 0.5s;
 }
 
 input,
 select {
 	height: 30px;
+	z-index: 1;
 }
 
 input,
 .calc__btn {
 	border-radius: 7px;
 	margin-top: 5px;
+}
+
+textarea:focus,
+input:focus,
+select:focus,
+button:focus {
+	outline: none;
 }
